# qgss-2025

./: pyproject.toml
lab-0/: lab0.ipynb
lab-1/: lab1.ipynb
