[project]
name = "qgss-2025"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.1",
    "qc-grader[jupyter,qiskit]",
    "qiskit-ibm-runtime>=0.40.1",
    "qiskit[visualization]>=2.1.0",
]

[tool.uv.sources]
qc-grader = { git = "https://github.com/qiskit-community/Quantum-Challenge-Grader.git" }
